fix blue text on ios, dvh attempts

--- a/app/globals.css
+++ b/app/globals.css
@@ -37,8 +37,9 @@ body {
   width: 100vw;
   max-width: 100vw;
   overflow-x: hidden;
-  height: 100svh;
+  height: 100dvh;
   line-height: 1.5;
+  color: var(--color-nearly-black)
 }
 
 a {
